refactor: HttpRequest 분리